*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,8 +1,8 @@
 msgFreeDBServerReturnedError = The FreeDB server returned the following error: %1 
 msgFreeDBServerUnreachable = The FreeDB server is unreachable.
-msgSelectTheToolOfYourChoice = Select the tool of your choice. You can select a tool by pressing its icon.
+msgSelectTheToolOfYourChoice = In this step you find all the tools you can use for the module you selected in the previous step. Each of the tools is described below. You can start a tool by pressing on its icon.
 msgSelectToolFirst = Please select a tool by ticking one of the check boxes.
-msgToolSelectModuleSelect = Select the module for which you would like to create or update items. This wizard can be started from the help menu. 
+msgToolSelectModuleSelect = Data Crow is divided in modules, such as the software and movie module. Each module has specific tools, such as the online search, that can be used. In this step you have to select the module for which would like to use a tool.  
 msgUnexpectedErrorOccurred = An unexpected error has occurred.
 msgMatchFound = A match was found for '%1'. Item '%2' has been updated.
 msgAddDrive = Add a new drive
