--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,7 +1,12 @@
+lblFiltering = Aan het zoeken..
+lblSortOrder = Sorteer volgorde
+lblAscending = Oplopend
+lblDescending = Aflopend
 msgFreeDBServerReturnedError = De FreeDB server retourneerde de volgende foutmelding: %1
 msgFreeDBServerUnreachable = De FreeDB server kan niet worden bereikt.
-msgToolSelectModuleSelect = Selecteer de module waarvoor u items wilt gaan aanmaken of bijwerken. Deze wizard kan gestart worden vanuit het help menu.
-msgSelectTheToolOfYourChoice = Selecteer het hulpmiddel. U kunt deze selecteren door op het icoontje te klikken.
+msgToolSelectModuleSelect = Data Crow is opgedeeld in modules, zoals de software en film module. Iedere module heeft een set hulpmiddelen, zoals bijvoorbeeld het online zoeken. In deze stap selecteert u de module waarvoor u een hulpmiddel wilt gebruiken.
+msgSelectTheToolOfYourChoice = In this step you find all the tools you can use for the module you selected in the previous step. Each of the tools is described below. You can start a tool by pressing on its icon.
+msgSelectTheToolOfYourChoice = In deze stap vindt u alle hulpmiddelen die beschikbaar zijn voor de module die u heeft geselecteerd in de vorige stap. Elk hulpmiddel is beschreven (zie onder). U kunt een hulpmiddel starten door op de icoon te klikken.
 msgSelectToolFirst = Selecteer eerst een hulpmiddel door deze aan te vinken
 tpCreateMultiple = Maak meerdere items in een keer aan.
 tpAddDrive = Voeg een directory toe. Deze directory kan vervolgens als schijfstation worden gebruikt.
