--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,7 @@
+lblFiltering = Filtering
+lblSortOrder = Sort order
+lblAscending = Ascending
+lblDescending = Descending
 lblToolSelectWizard = Tool Select Wizard
 lblSaveDirectly = Save directly: bypass the new items tab
 lblContainerManaged = Items can be assigned to a container. Adds a container field to this module.
