*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -415,7 +415,8 @@ lblCreateReport = Create Report
 lblCreateIndex = Create index
 lblFontStyle = Font Style
 lblEmpty = Empty
-lblEmptySearchValue = [empty / not filled]
+lblEmptySearchValue = Is Empty
+lblFilledSearchValue = Is Filled
 lblItemWizard = Item Wizard
 lblRecursiveDir = Recursive directory search
 lblInternetServer = Server
