--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1879,7 +1879,8 @@ sysMovieFieldCreated=Aangemaakt op
 0x0210=UHER ADPCM
 sysAuthorFieldDescription=Omschrijving
 msgEnterReturnDate=Vul de retourdatum in
-lblEmptySearchValue=[leeg]
+lblEmptySearchValue = Is Leeg
+lblFilledSearchValue = Is Gevuld
 sysBook=Boeken
 lblLoginname=Gebruikersnaam
 sysSoftwareFieldCreated=Aangemaakt op
