*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -339,7 +339,7 @@ lblLookAndFeel = Look & Feel
 lblNoLF = System Default
 lblLaf = Look & Feels
 lblSkinLF = Skin Look & Feel Themes
-lblLendItem = Lend this Item
+lblLendItem = Lent this Item
 lblSearchString = Keywords
 lblCopy = Copy
 lblPaste = Paste
