--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -201,13 +201,13 @@ msgEnterReturnDate = Please specify the date on which the item was returned
 msgEnterDate = Please specify the date on which the loan the starts
 msgSelectPerson = Please select the person to whom the item(s) are lend
 msgAllItemsAreAvailable = All the %1 items are available and can be lend
-msgAllItemsLoanInformation = Updating the information of %1 items. The items are currently all lend and can all be registered as returned.
+msgAllItemsLoanInformation = Updating the information of %1 items. The items are currently all borrowed and can all be registered as returned.
 msgItemIsAvailable = The item is currently available and can be lend
-msgLoanInformation = Item with title %1 is currently being lend by <b>%2</b>. The item was lend <b>%3 days</b> ago. %4
-msgLoanInformationToday = Item with title %1 is currently being lend by <b>%2</b>. The item was lend <b>today</b>. %3
-msgLoanInformationYesterday = Item with title %1 is currently being lend by <b>%2</b>. The item was lend <b>yesterday</b>. %3
+msgLoanInformation = Item with title %1 has been borrowed by <b>%2</b>. The item was borrowed <b>%3 days</b> ago. %4
+msgLoanInformationToday = Item with title %1 has been borrowed by <b>%2</b>. The item was borrowed <b>today</b>. %3
+msgLoanInformationYesterday = Item with title %1 has been borrowed by <b>%2</b>. The item was borrowed <b>yesterday</b>. %3
 msgLoanInformationDue = The item is due on %1.
-msgDeletePersonLendItems = This person did lend items in the past. Deleting this user will result in loosing loan history information. Continue anyway?
+msgDeletePersonLendItems = This person borrowed items in the past. Deleting this person will result in loosing loan history information. Continue anyway?
 msgReapplyingSettings = (Re-) applying Settings
 msgStartBackup = Starting the backup
 msgClosingDb = Closing the Database
