--- a/log4j.properties
+++ b/log4j.properties
@@ -1,8 +1,8 @@
 #
-#Mon May 03 19:56:30 CDT 2010
+#Thu Oct 07 18:06:44 CDT 2010
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.logfile.File=/C\:/Program Files/Development/projects/datacrow/data/data_crow.log
-log4j.rootLogger=debug, textpane, logfile
+log4j.appender.logfile.File=/C\:/Users/rwaals/Documents/$Private/Development/projects/datacrow/data/data_crow.log
+log4j.rootLogger=info, textpane, logfile
 log4j.appender.logfile.layout.ConversionPattern=%5p [%t] (%F\:%L) - %m%n
 log4j.appender.textpane=net.datacrow.util.logging.TextPaneAppender
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F\:%L) - %m%n
