--- a/homepage/version.properties
+++ b/homepage/version.properties
@@ -1,5 +1,5 @@
-version = 3.8.16
-comment = minor release
+version = 3.9
+comment = beta release
 download_url = http://www.datacrow.net/download.html
 information_url = http://www.datacrow.net/news.html
 type = p
