--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+lblGroupingItems = Bezig items te groeperen 
 lblComment = Opmerking
 lblFiltering = Aan het zoeken..
 lblSortOrder = Sorteer volgorde
