*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,6 @@
+lblZoom = Zoom
+lblHighRenderingQuality = Enable high quality rendering (low performance) 
+lblToggleToolbar = Toggle Toolbar
 lblGroupingItems = Grouping items 
 lblComment = Backup file Comment
 lblFiltering = Filtering
