--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgChartCreationError = A SQL related system error occurred while creating the chart.  
 msgFreeDBServerReturnedError = The FreeDB server returned the following error: %1 
 msgFreeDBServerUnreachable = The FreeDB server is unreachable.
 msgSelectTheToolOfYourChoice = In this step you find all the tools you can use for the module you selected in the previous step. Each of the tools is described below. You can start a tool by pressing on its icon.
