--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,7 @@
+lblZoom = Inzoomen
+msgChartCreationError = Er is een SQL gerelateerde fout opgetreden tijdens het samenstellen van de grafiek
+lblHighRenderingQuality = Activeer hoge kwaliteit rendering (verlaagde prestaties)
+lblToggleToolbar = (De-) Activeer Toolbar
 lblGroupingItems = Bezig items te groeperen 
 lblComment = Opmerking
 lblFiltering = Aan het zoeken..
