--- a/.classpath
+++ b/.classpath
@@ -55,6 +55,13 @@
 	<classpathentry kind="lib" path="lib/xml/xml-apis-ext-1.3.04.jar"/>
 	<classpathentry kind="lib" path="lib/xml/xmlgraphics-commons-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/xml/xsltc.jar"/>
-	<classpathentry kind="lib" path="lib/openchart2-1.4.3.jar"/>
+	<classpathentry kind="lib" path="lib/chart/gnujaxp.jar"/>
+	<classpathentry kind="lib" path="lib/chart/iText-2.1.5.jar"/>
+	<classpathentry kind="lib" path="lib/chart/jcommon-1.0.16.jar"/>
+	<classpathentry kind="lib" path="lib/chart/jfreechart-1.0.13-swt.jar"/>
+	<classpathentry kind="lib" path="lib/chart/jfreechart-1.0.13.jar"/>
+	<classpathentry kind="lib" path="lib/chart/junit.jar"/>
+	<classpathentry kind="lib" path="lib/chart/servlet.jar"/>
+	<classpathentry kind="lib" path="lib/chart/swtgraphics2d.jar"/>
 	<classpathentry kind="output" path="_build"/>
 </classpath>
