*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,7 @@
+lblNeedMoreTime = Maybe later..
+lblLeaveMeAlone = Never ever!
+lblDonation = Sure!
+lblShowPicturesInTabs = Show pictures in separate tabs
 lblZoom = Zoom
 lblHighRenderingQuality = Enable high quality rendering (low performance) 
 lblToggleToolbar = Toggle Toolbar
@@ -441,7 +445,7 @@ lblSystemInformation = System Information
 lblHelp = Help
 lblInformation = Information
 lblAbout = About
-lblDonate = Donate
+lblDonate = Make a donation
 lblTargetFile = Target file
 lblOpenReport = Open Report
 lblResults = Show Results
