--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,4 +1,8 @@
+lblNeedMoreTime = Later..
+lblLeaveMeAlone = Nooit!
+lblDonation = Natuurlijk!
 lblZoom = Inzoomen
+msgDonateLargeText = Data Crow is het resultaat van de inspanningen van 1 persoon (dat ben ik). Een aanzienlijk gedeelte van mijn vrije tijd spendeer ik aan dit product. Ik ben blij dit product met zo iemand zoals u te kunnen delen Misschien gebruikt u Data Crow niet alleen omdat het 100% gratis is, maar vooral omdat (in alle bescheidenheid) Data Crow het beste product voor verzamelaar is. Indien dit laatste het geval is, waarom zou u dan niet een klein bedrag doneren aan de maker? Uiteraard hoeft dit niet, het is geheel aan u. Ik wens u in ieder geval het allerbeste toe!
 msgChartCreationError = Er is een SQL gerelateerde fout opgetreden tijdens het samenstellen van de grafiek
 lblHighRenderingQuality = Activeer hoge kwaliteit rendering (verlaagde prestaties)
 lblToggleToolbar = (De-) Activeer Toolbar
@@ -1572,7 +1576,7 @@ sysSoftwareFieldRating=Beoordeling
 0x0135=Sipro Kelvin
 0x0132=Sipro ACELP.8V3
 0x0133=Sipro G729
-lblDonate=Donate
+lblDonate=Doneer
 sysMovie_externalreferenceFieldID=ID
 sysLanguage=Taal
 0x0680=VME VMPCM
