--- a/modules/container.properties
+++ b/modules/container.properties
@@ -1,45 +1,61 @@
 #
-#Fri Jan 09 23:30:07 CET 2009
+#Mon Nov 15 15:41:33 CET 2010
 online_search_field_settings_dialog_size=600/450
+file_import_online_service_region=
 online_search_default_server=
 import_local_art_back_keywords=back
 enabled=true
+container_tree_panel_flat=false
 import_local_art_media_keywords=cd,dvd,media
 card_view_picture_order=3\#
 online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=557/505
+import_cd_storagemedium=
 online_search_default_mode=
-field_definitions={1/&/null/&/true/&/true/&/true}{4/&/null/&/true/&/false/&/false}{216/&/null/&/true/&/false/&/false}{215/&/null/&/true/&/false/&/false}{3/&/null/&/true/&/false/&/false}{0/&/null/&/false/&/false/&/false}{2/&/null/&/true/&/false/&/false}{202/&/null/&/true/&/false/&/false}{205/&/null/&/true/&/false/&/false}{204/&/null/&/true/&/false/&/false}{209/&/null/&/true/&/false/&/false}{212/&/null/&/true/&/false/&/false}{211/&/null/&/true/&/false/&/false}{210/&/null/&/true/&/false/&/false}{201/&/null/&/true/&/false/&/false}{214/&/null/&/true/&/false/&/false}{203/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{101/&/null/&/false/&/false/&/false}{104/&/null/&/false/&/false/&/false}{105/&/null/&/false/&/false/&/false}{102/&/null/&/false/&/false/&/false}{103/&/null/&/false/&/false/&/false}
+field_definitions={5/&/null/&/true/&/false/&/false/&/false/&/null}{6/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{1/&/null/&/true/&/true/&/true/&/false/&/lblInformation}{4/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{216/&/null/&/true/&/false/&/false/&/false/&/null}{215/&/null/&/true/&/false/&/false/&/false/&/null}{3/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/false/&/false/&/false/&/false/&/null}{2/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{202/&/null/&/true/&/false/&/false/&/false/&/null}{205/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{204/&/null/&/true/&/false/&/false/&/false/&/null}{209/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{212/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{211/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{210/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{201/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/true/&/false/&/false/&/false/&/null}{203/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{101/&/null/&/false/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}
 group_by=1\#
 card_view_item_description=
 table_column_order=
 online_search_default_region=
+import_save_directly=false
 tree_panel_shown_items=64
-auto_create_subitems=true
+mass_update_use_original_service_settings=false
 loan_form_size=500/500
 web_field_settings_dialog_size=500/300
 search_order=
+title_cleanup_regex=
 item_form_size=700/600
 title_cleanup=axxo,dvdrip,cdrip,dvd-rip,cd-rip
 online_search_field_overwrite_settings=
+file_import_online_service_mode=
 online_search_overwrite=false
 file_import_dialog_size=550/600
 field_settings_dialog_size=525/556
 quick_view_settings_dialog_size=575/456
+file_import_use_online_service=true
 auto_add_perfect_match=false
-quick_view_field_definitions={1/&/true/&/Horizontal/&/0}{2/&/true/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{216/&/true/&/Horizontal/&/0}{215/&/false/&/Horizontal/&/0}{209/&/true/&/Horizontal/&/0}{212/&/true/&/Horizontal/&/0}{211/&/true/&/Horizontal/&/0}{210/&/true/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{3/&/false/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{202/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{204/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{203/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}
+quick_view_field_definitions={5/&/false/&/Horizontal/&/0}{6/&/false/&/Horizontal/&/0}{1/&/false/&/Horizontal/&/0}{2/&/true/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{216/&/false/&/Horizontal/&/0}{215/&/false/&/Horizontal/&/0}{209/&/true/&/Horizontal/&/0}{212/&/true/&/Horizontal/&/0}{211/&/true/&/Horizontal/&/0}{210/&/true/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{3/&/false/&/Horizontal/&/0}{101/&/false/&/Horizontal/&/0}{104/&/false/&/Horizontal/&/0}{105/&/false/&/Horizontal/&/0}{102/&/false/&/Horizontal/&/0}{103/&/false/&/Horizontal/&/0}{202/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{204/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{203/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}
+import_cd_container=
 card_view_settings_dialog_size=500/400
+file_import_directory_usage=0
 Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=210\#214\#203\#104\#209\#103\#204\#205\#105\#212\#201\#102\#1\#206\#211\#202\#0\#101\#
 online_search_form_size=700/600
 import_local_art_recurses=true
 import_local_art=true
 import_cd_dialog_size=600/900
-web_field_definitions={1/&/100/&/0/&/true/&/false/&/false}{4/&/600/&/500/&/true/&/false/&/false}{2/&/100/&/0/&/true/&/false/&/false}{216/&/100/&/0/&/false/&/false/&/false}{215/&/100/&/0/&/false/&/false/&/false}{3/&/100/&/0/&/false/&/false/&/false}{202/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/false/&/false/&/false}{204/&/100/&/0/&/false/&/false/&/false}{209/&/100/&/0/&/false/&/false/&/false}{212/&/100/&/0/&/false/&/false/&/false}{211/&/100/&/0/&/false/&/false/&/false}{210/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/false/&/false/&/false}{214/&/100/&/0/&/false/&/false/&/false}{203/&/100/&/0/&/false/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{101/&/100/&/0/&/false/&/false/&/false}{104/&/100/&/0/&/false/&/false/&/false}{105/&/100/&/0/&/false/&/false/&/false}{102/&/100/&/0/&/false/&/false/&/false}{103/&/100/&/0/&/false/&/false/&/false}
+mass_update_server=
+web_field_definitions={5/&/100/&/0/&/false/&/false/&/false}{6/&/100/&/0/&/false/&/false/&/false}{1/&/100/&/0/&/true/&/false/&/false}{4/&/600/&/500/&/true/&/false/&/false}{2/&/100/&/0/&/true/&/false/&/false}{216/&/100/&/0/&/false/&/false/&/false}{215/&/100/&/0/&/false/&/false/&/false}{3/&/100/&/0/&/false/&/false/&/false}{202/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/false/&/false/&/false}{204/&/100/&/0/&/false/&/false/&/false}{209/&/100/&/0/&/false/&/false/&/false}{212/&/100/&/0/&/false/&/false/&/false}{211/&/100/&/0/&/false/&/false/&/false}{210/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/false/&/false/&/false}{214/&/100/&/0/&/false/&/false/&/false}{203/&/100/&/0/&/false/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{101/&/100/&/0/&/false/&/false/&/false}{104/&/100/&/0/&/false/&/false/&/false}{105/&/100/&/0/&/false/&/false/&/false}{102/&/100/&/0/&/false/&/false/&/false}{103/&/100/&/0/&/false/&/false/&/false}
+show_pictures_in_separate_tabs=true
 filter_dialog_size=700/400
-quick_filter_default_field=0
+file_import_online_service=
+default_view=1
+quick_filter_default_field=202
 simple_item_view_size=450/550
+mass_update_mode=
+table_settings=[64]
 file_renamer_pattern=
 online_search_ub_items=false
 synchronizer_dialog_size=550/600
+mass_update_region=
