--- a/modules/media.properties
+++ b/modules/media.properties
@@ -1,6 +1,7 @@
 #
-#Fri Jan 09 23:30:07 CET 2009
+#Mon Nov 15 15:41:33 CET 2010
 online_search_field_settings_dialog_size=600/450
+file_import_online_service_region=
 online_search_default_server=
 import_local_art_back_keywords=back
 enabled=true
@@ -9,35 +10,49 @@ card_view_picture_order=
 online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
+import_cd_storagemedium=
 online_search_default_mode=
-field_definitions={216/&/null/&/true/&/false/&/false}{215/&/null/&/true/&/false/&/false}{0/&/null/&/false/&/false/&/false}{150/&/null/&/true/&/true/&/true}{201/&/null/&/true/&/false/&/false}{152/&/null/&/true/&/false/&/false}{213/&/null/&/true/&/false/&/false}{151/&/null/&/true/&/false/&/false}{203/&/null/&/true/&/false/&/false}{204/&/null/&/true/&/false/&/false}{205/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{154/&/null/&/true/&/false/&/false}{101/&/null/&/false/&/false/&/false}{103/&/null/&/false/&/false/&/false}{105/&/null/&/false/&/false/&/false}{102/&/null/&/false/&/false/&/false}{104/&/null/&/false/&/false/&/false}{214/&/null/&/false/&/false/&/false}{202/&/null/&/true/&/false/&/false}
+field_definitions={155/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{217/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{216/&/null/&/true/&/false/&/false/&/false/&/null}{215/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/false/&/false/&/false/&/false/&/null}{150/&/null/&/true/&/true/&/true/&/false/&/lblInformation}{201/&/null/&/true/&/false/&/false/&/false/&/null}{152/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{213/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{151/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{203/&/null/&/true/&/false/&/false/&/false/&/null}{204/&/null/&/true/&/false/&/false/&/false/&/null}{205/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{206/&/null/&/true/&/false/&/false/&/false/&/lblTechnicalInfo}{154/&/null/&/true/&/false/&/false/&/false/&/lblInformation}{101/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}{214/&/null/&/false/&/false/&/false/&/false/&/null}{202/&/null/&/true/&/false/&/false/&/false/&/null}
 group_by=201\#152\#
 card_view_item_description=
 table_column_order=201\#150\#152\#154\#
 online_search_default_region=
-auto_create_subitems=true
+import_save_directly=false
+mass_update_use_original_service_settings=false
 loan_form_size=500/500
 web_field_settings_dialog_size=500/300
 search_order=Title\#
+title_cleanup_regex=
 item_form_size=700/600
 title_cleanup=axxo,dvdrip,cdrip,dvd-rip,cd-rip
 online_search_field_overwrite_settings=
+file_import_online_service_mode=
 online_search_overwrite=false
 file_import_dialog_size=550/800
 field_settings_dialog_size=605/525
 quick_view_settings_dialog_size=508/501
+file_import_use_online_service=true
 auto_add_perfect_match=false
-quick_view_field_definitions={216/&/true/&/Horizontal/&/0}{215/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{214/&/true/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{213/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{150/&/true/&/Horizontal/&/0}{152/&/true/&/Horizontal/&/0}{151/&/true/&/Vertical/&/0}{203/&/false/&/Horizontal/&/0}{154/&/true/&/Horizontal/&/0}{204/&/true/&/Horizontal/&/0}{205/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{202/&/false/&/Horizontal/&/0}
+quick_view_field_definitions={155/&/false/&/Horizontal/&/0}{217/&/false/&/Horizontal/&/0}{216/&/true/&/Horizontal/&/0}{215/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{214/&/true/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{213/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{150/&/true/&/Horizontal/&/0}{152/&/true/&/Horizontal/&/0}{151/&/true/&/Vertical/&/0}{203/&/false/&/Horizontal/&/0}{154/&/true/&/Horizontal/&/0}{204/&/true/&/Horizontal/&/0}{205/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{202/&/false/&/Horizontal/&/0}
+import_cd_container=
 card_view_settings_dialog_size=500/400
+file_import_directory_usage=0
 Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=151\#104\#203\#154\#150\#103\#204\#105\#205\#102\#201\#206\#152\#153\#202\#0\#101\#
 online_search_form_size=700/600
 import_local_art_recurses=true
 import_local_art=true
 import_cd_dialog_size=550/400
-web_field_definitions={202/&/100/&/0/&/false/&/false/&/false}{204/&/100/&/0/&/true/&/false/&/false}{216/&/100/&/0/&/true/&/false/&/false}{215/&/100/&/0/&/false/&/false/&/false}{203/&/100/&/0/&/false/&/false/&/false}{213/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{151/&/100/&/0/&/true/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}{152/&/100/&/0/&/true/&/false/&/false}
+mass_update_server=
+web_field_definitions={155/&/100/&/0/&/false/&/false/&/false}{217/&/100/&/0/&/false/&/false/&/false}{202/&/100/&/0/&/false/&/false/&/false}{204/&/100/&/0/&/true/&/false/&/false}{216/&/100/&/0/&/true/&/false/&/false}{215/&/100/&/0/&/false/&/false/&/false}{203/&/100/&/0/&/false/&/false/&/false}{213/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{151/&/100/&/0/&/true/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}{152/&/100/&/0/&/true/&/false/&/false}
+show_pictures_in_separate_tabs=true
 filter_dialog_size=700/400
-quick_filter_default_field=0
+file_import_online_service=
+default_view=1
+quick_filter_default_field=202
 simple_item_view_size=450/550
+mass_update_mode=
+table_settings=[57]
 online_search_ub_items=false
 synchronizer_dialog_size=550/400
+mass_update_region=
