--- a/modules/movie.properties
+++ b/modules/movie.properties
@@ -1,5 +1,5 @@
 #
-#Wed Dec 09 15:56:54 CET 2009
+#Mon Nov 15 15:41:33 CET 2010
 online_search_field_settings_dialog_size=675/429
 file_import_online_service_region=
 online_search_default_server=Amazon
@@ -17,6 +17,7 @@ group_by=3\#
 card_view_item_description=
 table_column_order=150\#152\#3\#154\#
 online_search_default_region=us
+import_save_directly=false
 mass_update_use_original_service_settings=false
 loan_form_size=500/500
 web_field_settings_dialog_size=481/545
@@ -33,7 +34,7 @@ quick_view_settings_dialog_size=463/476
 file_import_file_types=mpg\#mpeg\#riff\#avi\#vob\#ogm\#mov\#ifo\#mkv\#asf\#wmv\#
 file_import_use_online_service=true
 auto_add_perfect_match=false
-quick_view_field_definitions={36/&/false/&/Horizontaal/&/0}{35/&/false/&/Horizontaal/&/0}{218/&/false/&/Horizontaal/&/0}{32/&/true/&/Horizontal/&/0}{33/&/true/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{214/&/true/&/Horizontal/&/0}{31/&/true/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{155/&/false/&/Horizontal/&/0}{217/&/false/&/Horizontal/&/0}{153/&/false/&/Horizontal/&/0}{216/&/false/&/Horizontal/&/0}{215/&/false/&/Horizontal/&/0}{213/&/false/&/Horizontal/&/0}{34/&/false/&/Horizontal/&/0}{212/&/false/&/Horizontal/&/0}{209/&/false/&/Horizontal/&/0}{150/&/true/&/Horizontal/&/0}{7/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}{151/&/true/&/Vertical/&/0}{30/&/true/&/Horizontal/&/0}{29/&/false/&/Horizontal/&/0}{203/&/false/&/Horizontal/&/0}{12/&/false/&/Horizontal/&/0}{17/&/true/&/Horizontal/&/0}{2/&/false/&/Horizontal/&/0}{205/&/true/&/Horizontal/&/0}{28/&/false/&/Horizontal/&/0}{13/&/true/&/Horizontal/&/0}{18/&/true/&/Horizontal/&/0}{23/&/true/&/Horizontal/&/0}{9/&/true/&/Horizontal/&/0}{21/&/false/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{152/&/true/&/Horizontal/&/0}{24/&/true/&/Horizontal/&/0}{19/&/true/&/Horizontal/&/0}{154/&/true/&/Horizontal/&/0}{11/&/false/&/Horizontal/&/0}{204/&/false/&/Horizontal/&/0}{20/&/true/&/Horizontal/&/0}{25/&/true/&/Horizontal/&/0}{10/&/true/&/Horizontal/&/0}{202/&/false/&/Horizontal/&/0}{15/&/false/&/Horizontal/&/0}{16/&/false/&/Horizontal/&/0}{14/&/false/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{207/&/false/&/Horizontal/&/0}{208/&/false/&/Horizontal/&/0}{211/&/true/&/Horizontal/&/0}{210/&/true/&/Horizontal/&/0}
+quick_view_field_definitions={19/&/true/&/Horizontal/&/0}{152/&/true/&/Horizontal/&/0}{31/&/true/&/Horizontal/&/0}{36/&/false/&/Horizontaal/&/0}{35/&/false/&/Horizontaal/&/0}{218/&/false/&/Horizontaal/&/0}{32/&/false/&/Horizontal/&/0}{33/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{101/&/false/&/Horizontal/&/0}{104/&/false/&/Horizontal/&/0}{105/&/false/&/Horizontal/&/0}{102/&/false/&/Horizontal/&/0}{103/&/false/&/Horizontal/&/0}{155/&/false/&/Horizontal/&/0}{217/&/false/&/Horizontal/&/0}{153/&/false/&/Horizontal/&/0}{216/&/false/&/Horizontal/&/0}{215/&/false/&/Horizontal/&/0}{213/&/false/&/Horizontal/&/0}{34/&/false/&/Horizontal/&/0}{212/&/false/&/Horizontal/&/0}{209/&/false/&/Horizontal/&/0}{150/&/false/&/Horizontal/&/0}{7/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}{151/&/true/&/Vertical/&/0}{30/&/true/&/Horizontal/&/0}{29/&/false/&/Horizontal/&/0}{203/&/false/&/Horizontal/&/0}{12/&/false/&/Horizontal/&/0}{17/&/true/&/Horizontal/&/0}{2/&/false/&/Horizontal/&/0}{205/&/true/&/Horizontal/&/0}{28/&/false/&/Horizontal/&/0}{13/&/true/&/Horizontal/&/0}{18/&/true/&/Horizontal/&/0}{23/&/true/&/Horizontal/&/0}{9/&/true/&/Horizontal/&/0}{21/&/false/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{24/&/true/&/Horizontal/&/0}{154/&/true/&/Horizontal/&/0}{11/&/false/&/Horizontal/&/0}{204/&/false/&/Horizontal/&/0}{20/&/true/&/Horizontal/&/0}{25/&/true/&/Horizontal/&/0}{10/&/true/&/Horizontal/&/0}{202/&/false/&/Horizontal/&/0}{15/&/false/&/Horizontal/&/0}{16/&/false/&/Horizontal/&/0}{14/&/false/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{207/&/false/&/Horizontal/&/0}{208/&/false/&/Horizontal/&/0}{211/&/true/&/Horizontal/&/0}{210/&/true/&/Horizontal/&/0}
 import_cd_container=
 card_view_settings_dialog_size=500/400
 file_import_directory_usage=0
@@ -43,13 +44,17 @@ online_search_form_size=746/572
 import_local_art_recurses=true
 import_local_art=true
 import_cd_dialog_size=668/590
+mass_update_server=
 web_field_definitions={36/&/100/&/0/&/false/&/false/&/false}{35/&/100/&/0/&/false/&/false/&/false}{218/&/100/&/0/&/false/&/false/&/false}{155/&/100/&/0/&/false/&/false/&/false}{217/&/100/&/0/&/false/&/false/&/false}{153/&/100/&/0/&/false/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{151/&/400/&/500/&/true/&/false/&/true}{7/&/100/&/0/&/true/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/true}{19/&/100/&/0/&/true/&/false/&/false}{202/&/100/&/0/&/false/&/false/&/false}{204/&/100/&/0/&/false/&/false/&/false}{216/&/100/&/0/&/false/&/false/&/false}{215/&/100/&/0/&/false/&/false/&/false}{203/&/100/&/0/&/false/&/false/&/false}{4/&/100/&/0/&/false/&/false/&/true}{15/&/100/&/0/&/false/&/false/&/false}{17/&/100/&/0/&/false/&/false/&/false}{10/&/100/&/0/&/false/&/false/&/false}{23/&/100/&/0/&/false/&/false/&/false}{16/&/100/&/0/&/false/&/false/&/false}{25/&/100/&/0/&/false/&/false/&/false}{213/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/false/&/false/&/false}{5/&/100/&/0/&/false/&/false/&/true}{34/&/100/&/0/&/false/&/false/&/true}{32/&/100/&/0/&/false/&/false/&/false}{33/&/100/&/0/&/false/&/false/&/false}{209/&/100/&/0/&/false/&/false/&/false}{212/&/100/&/0/&/false/&/false/&/false}{211/&/100/&/0/&/false/&/false/&/false}{210/&/100/&/0/&/false/&/false/&/false}{13/&/100/&/0/&/false/&/false/&/false}{14/&/100/&/0/&/false/&/false/&/false}{3/&/100/&/0/&/false/&/false/&/false}{12/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/false/&/false/&/false}{214/&/100/&/0/&/false/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{20/&/100/&/0/&/false/&/false/&/false}{21/&/100/&/0/&/false/&/false/&/false}{31/&/100/&/0/&/false/&/false/&/false}{30/&/100/&/0/&/false/&/false/&/false}{207/&/100/&/0/&/false/&/false/&/false}{208/&/100/&/0/&/false/&/false/&/false}{28/&/100/&/0/&/false/&/false/&/false}{29/&/100/&/0/&/false/&/false/&/false}{24/&/100/&/0/&/false/&/false/&/false}{1/&/100/&/0/&/false/&/false/&/false}{101/&/100/&/0/&/false/&/false/&/false}{104/&/100/&/0/&/false/&/false/&/false}{105/&/100/&/0/&/false/&/false/&/false}{102/&/100/&/0/&/false/&/false/&/false}{103/&/100/&/0/&/false/&/false/&/false}{18/&/100/&/0/&/false/&/false/&/false}{9/&/100/&/0/&/false/&/false/&/false}{2/&/100/&/0/&/false/&/false/&/false}{11/&/100/&/0/&/false/&/false/&/false}{152/&/100/&/0/&/false/&/false/&/false}
+show_pictures_in_separate_tabs=true
 filter_dialog_size=700/400
 file_import_online_service=
 default_view=1
-quick_filter_default_field=0
+quick_filter_default_field=4
 simple_item_view_size=450/550
-table_settings=[51]{0,75}{1,75}{2,75}{3,75}{4,75}{5,75}{7,75}{9,75}{10,75}{11,75}{12,75}{13,75}{14,75}{15,75}{17,75}{152,75}{153,75}{16,75}{154,75}{19,75}{155,75}{18,75}{21,75}{20,75}{23,75}{25,75}{24,75}{27,75}{29,75}{28,75}{31,75}{150,75}{30,75}{151,75}{34,75}{35,75}{32,75}{33,75}{36,75}{205,75}{204,75}{207,75}{206,75}{201,75}{203,75}{202,75}{216,75}{217,75}{218,75}{212,75}{213,75}{214,75}{215,75}{208,75}{209,75}{210,75}{211,75}{102,75}{103,75}{101,75}{104,75}{105,75}
+mass_update_mode=
+table_settings=[51]{0,75}{1,75}{2,75}{3,75}{4,75}{5,75}{7,75}{9,75}{10,75}{11,75}{12,75}{13,75}{14,75}{15,75}{152,75}{17,75}{16,75}{153,75}{19,75}{154,75}{18,75}{155,75}{21,75}{20,75}{23,75}{25,75}{24,75}{27,75}{29,75}{28,75}{31,75}{150,75}{30,75}{151,75}{34,75}{35,75}{32,75}{33,75}{36,75}{205,75}{204,75}{207,75}{206,75}{201,75}{203,75}{202,75}{216,75}{217,75}{218,75}{212,75}{213,75}{214,75}{215,75}{208,75}{209,75}{210,75}{211,75}{102,75}{103,75}{101,75}{104,75}{105,75}
 file_renamer_pattern=
 online_search_ub_items=false
 synchronizer_dialog_size=582/568
+mass_update_region=
