--- a/modules/musicalbum.properties
+++ b/modules/musicalbum.properties
@@ -1,5 +1,5 @@
 #
-#Wed Dec 09 15:56:54 CET 2009
+#Mon Nov 15 15:41:33 CET 2010
 online_search_field_settings_dialog_size=600/450
 file_import_online_service_region=
 online_search_default_server=Amazon
@@ -17,6 +17,7 @@ group_by=1\#150\#
 card_view_item_description=
 table_column_order=150\#1\#2\#152\#154\#
 online_search_default_region=us
+import_save_directly=false
 mass_update_use_original_service_settings=false
 loan_form_size=500/500
 web_field_settings_dialog_size=504/534
@@ -33,7 +34,7 @@ quick_view_settings_dialog_size=479/527
 file_import_file_types=mp3\#ogg\#mp4\#mp4a\#m4p\#flac\#flc\#ape\#asf\#wav\#mpc\#ra\#wma\#
 file_import_use_online_service=true
 auto_add_perfect_match=false
-quick_view_field_definitions={218/&/false/&/Horizontaal/&/0}{202/&/false/&/Horizontal/&/0}{213/&/false/&/Horizontal/&/0}{155/&/false/&/Horizontal/&/0}{204/&/true/&/Horizontal/&/0}{216/&/true/&/Horizontal/&/0}{215/&/false/&/Horizontal/&/0}{11/&/true/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{217/&/false/&/Horizontal/&/0}{214/&/true/&/Horizontal/&/0}{153/&/false/&/Horizontal/&/0}{203/&/false/&/Horizontal/&/0}{207/&/true/&/Horizontal/&/0}{208/&/true/&/Horizontal/&/0}{4/&/false/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{9/&/true/&/Horizontal/&/0}{150/&/true/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{151/&/true/&/Vertical/&/0}{7/&/true/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{152/&/true/&/Horizontal/&/0}{154/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{2/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}
+quick_view_field_definitions={218/&/false/&/Horizontaal/&/0}{202/&/false/&/Horizontal/&/0}{213/&/false/&/Horizontal/&/0}{155/&/false/&/Horizontal/&/0}{204/&/false/&/Horizontal/&/0}{216/&/false/&/Horizontal/&/0}{215/&/false/&/Horizontal/&/0}{11/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{217/&/false/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{153/&/false/&/Horizontal/&/0}{203/&/false/&/Horizontal/&/0}{207/&/false/&/Horizontal/&/0}{208/&/false/&/Horizontal/&/0}{4/&/false/&/Horizontal/&/0}{101/&/false/&/Horizontal/&/0}{104/&/false/&/Horizontal/&/0}{105/&/false/&/Horizontal/&/0}{102/&/false/&/Horizontal/&/0}{103/&/false/&/Horizontal/&/0}{9/&/false/&/Horizontal/&/0}{150/&/false/&/Horizontal/&/0}{152/&/true/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{154/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}{151/&/true/&/Vertical/&/0}{7/&/false/&/Horizontal/&/0}{6/&/false/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{2/&/true/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}
 import_cd_container=
 card_view_settings_dialog_size=500/400
 file_import_directory_usage=0
@@ -43,12 +44,16 @@ online_search_form_size=704/612
 import_local_art_recurses=true
 import_local_art=true
 import_cd_dialog_size=598/658
+mass_update_server=
 web_field_definitions={218/&/100/&/0/&/false/&/false/&/false}{155/&/100/&/0/&/false/&/false/&/false}{11/&/100/&/0/&/true/&/false/&/false}{217/&/100/&/0/&/false/&/false/&/false}{153/&/100/&/0/&/false/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{151/&/400/&/500/&/true/&/false/&/true}{202/&/100/&/0/&/false/&/false/&/false}{204/&/100/&/0/&/false/&/false/&/false}{216/&/100/&/0/&/false/&/false/&/false}{215/&/100/&/0/&/false/&/false/&/false}{203/&/100/&/0/&/false/&/false/&/false}{1/&/100/&/0/&/false/&/false/&/false}{213/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/false/&/false/&/false}{2/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/false/&/false/&/false}{214/&/100/&/0/&/false/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{6/&/100/&/0/&/false/&/false/&/false}{7/&/100/&/0/&/false/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/true}{5/&/100/&/0/&/true/&/false/&/false}{207/&/100/&/0/&/false/&/false/&/false}{208/&/100/&/0/&/false/&/false/&/false}{3/&/100/&/0/&/false/&/false/&/false}{4/&/100/&/0/&/false/&/false/&/false}{101/&/100/&/0/&/false/&/false/&/false}{104/&/100/&/0/&/false/&/false/&/false}{105/&/100/&/0/&/false/&/false/&/false}{102/&/100/&/0/&/false/&/false/&/false}{103/&/100/&/0/&/false/&/false/&/false}{9/&/100/&/0/&/false/&/false/&/false}{152/&/100/&/0/&/false/&/false/&/true}
+show_pictures_in_separate_tabs=true
 filter_dialog_size=700/400
 file_import_online_service=
 default_view=1
 quick_filter_default_field=150
 simple_item_view_size=450/550
-table_settings=[52]{0,75}{205,75}{204,75}{1,75}{2,75}{207,75}{206,75}{3,75}{201,75}{4,75}{5,75}{6,75}{203,75}{202,75}{7,75}{8,75}{9,75}{10,75}{11,75}{152,75}{153,75}{154,75}{155,75}{216,75}{217,75}{218,75}{213,75}{214,75}{215,75}{208,75}{150,75}{151,75}{102,75}{103,75}{101,75}{104,75}{105,75}
+mass_update_mode=
+table_settings=[52]{205,75}{0,75}{1,75}{204,75}{207,75}{2,75}{3,75}{206,75}{4,75}{201,75}{5,75}{203,75}{6,75}{202,75}{7,75}{8,75}{9,75}{10,75}{11,75}{152,75}{153,75}{154,75}{155,75}{216,75}{217,75}{218,75}{213,75}{214,75}{215,75}{208,75}{150,75}{151,75}{102,75}{103,75}{101,75}{104,75}{105,75}
 online_search_ub_items=false
 synchronizer_dialog_size=640/663
+mass_update_region=
