*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblAssociateModule = Person Module
 lblAwsKey = Amazon Web Services Account
 lblGetAwsKey = Request Key
 lblAwsSecretKey = AWS Secret Key
