*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,9 @@
+lblDaysBefore = Days ago
+lblDaysAfter = Days in the future
+lblToday = Today
+lblMonthsAgo = Months ago
+lblYearsAgo = Years ago
+lblImdbMaxActors = Retrieve maximum number of actors (0=all)
 lblAssociateModule = Person Module
 lblAwsKey = Amazon Web Services Account
 lblGetAwsKey = Request Key
