--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,9 @@
+lblDaysBefore = Dagen geleden
+lblDaysAfter = Dagen in de toekomst
+lblToday = Vandaag
+lblMonthsAgo = Maanden geleden
+lblYearsAgo = Jaren geleden
+msgExportFieldSelect = Selecteer hier de velden die u wilt exporteren
 lblNeedMoreTime = Later..
 lblLeaveMeAlone = Nooit!
 lblDonation = Natuurlijk!
