--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,5 @@
+lblReplace = Replace ?
+lblFindReplace = Find & Replace
 lblDaysBefore = Days ago
 lblDaysAfter = Days in the future
 lblToday = Today
@@ -7,6 +9,7 @@ lblImdbMaxActors = Retrieve maximum number of actors (0=all)
 lblAssociateModule = Person Module
 lblAwsKey = Amazon Web Services Account
 lblGetAwsKey = Request Key
+lblReplacement = Replacement
 lblAwsSecretKey = AWS Secret Key
 lblAwsAccessKeyID = AWS Access Key ID
 lblNeedMoreTime = Maybe later..
