--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,9 +1,8 @@
-lblDaysBefore = Dagen geleden
-lblDaysAfter = Dagen in de toekomst
-lblToday = Vandaag
-lblMonthsAgo = Maanden geleden
-lblYearsAgo = Jaren geleden
-msgExportFieldSelect = Selecteer hier de velden die u wilt exporteren
+msgEnterValueForFind = U geeft geen zoekterm opgegeven
+lblReplace = Vervangen ?
+lblReplacement = Vervang door
+tpFindReplace = Vervang een deel van een tekst met een andere tekst
+lblFindReplace = Zoek en vervang
 lblNeedMoreTime = Later..
 lblLeaveMeAlone = Nooit!
 lblDonation = Natuurlijk!
