--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -1,3 +1,4 @@
+tpFindReplace = Replace part of a text with another value
 tpAwsAccessKeyID = An AWS account can be requested for on the Amazon site: http://aws.amazon.com
 tpAwsSecretKey = An AWS secret key is supplied to you when you have registered on Amazon site: http://aws.amazon.com
 tpCreateMultiple = Create multiple items at once.
