*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,5 @@
+lblRating = Rating
+lblMovieMeterRetrieveReviews = Include reviews in description
 lblReplace = Replace ?
 lblFindReplace = Find & Replace
 lblDaysBefore = Days ago
