--- a/homepage/version.properties
+++ b/homepage/version.properties
@@ -1,5 +1,6 @@
-version = 3.9.3
-comment = production release
-download_url = http://www.datacrow.net/download.html
-information_url = http://www.datacrow.net/news.html
-type = p
+#Sat Jan 29 18:03:08 CET 2011
+download_url=http\://www.datacrow.net/download.html
+version=3.9.4
+type=p
+information_url=http\://www.datacrow.net/news.html
+comment=production release
