--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,8 +1,5 @@
-msgEnterValueForFind = U geeft geen zoekterm opgegeven
-lblReplace = Vervangen ?
-lblReplacement = Vervang door
-tpFindReplace = Vervang een deel van een tekst met een andere tekst
-lblFindReplace = Zoek en vervang
+lblRating = Score
+lblMovieMeterRetrieveReviews = Voeg reviews aan omschrijving toe
 lblNeedMoreTime = Later..
 lblLeaveMeAlone = Nooit!
 lblDonation = Natuurlijk!
