*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgReadingFilesHasFinished = Finished reading files
 msgEnterValueForFind = Please enter a value to find and replace
 msgExportFieldSelect = Select the fields that you want to export
 msgAwsAccessKeyID = In case you experience connection issues it is best to stop using the shared Amazon account and start using your own. An Amazon Web Services (AWS) account can be requested for on the AWS site. After registration you will be provided with an access key ID and a secret key which have to be entered in the corresponding fields.
@@ -113,6 +114,7 @@ msgFileNotWritable = Could not rename %1 as it not writable.
 msgFileRenamePreviewHelp = Here the expected result of the renaming task is shown. Check if the result match your expectations. Press start to start renaming the files or cancel to cancel and redefine the task. Note that the eventual result might differ as files can only be renamed if the actually are present on your system.  
 msgNoPatternEntered = No pattern has been entered!
 msgSelectDirFirst = Select a directory first.
+msgSelectFileFirst = Select a file first.
 msgRenamedFileFromTo = Renamed %1 to %2.
 msgFileRenamingError = An error occurred while renaming the file: %1.
 msgNoItemsToRename = There are no items which can be renamed. Either there are no items available at all or the available items are missing required information.
