--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+msgReadingFilesHasFinished = Inlezen van bestanden is volbracht
 sysDeveloperFieldUserInteger2=Gebruikersveld - Numeriek 2
 msgNotSaved=Niet alle veranderingen zijn opgeslagen. Wilt u deze nu opslaan?
 sysMovieFieldColor=Color
