*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,5 @@
+lblItemFormTab = Item form tab 
+lblShowInQuickView = Show in the quick view
 lblRecursive = Recursive
 lblRating = Rating
 lblMovieMeterRetrieveReviews = Include reviews in description
@@ -390,6 +392,7 @@ lblLoan = Loan Administration
 lblSelectModule = Select a module
 lblSelectModuleHelp = Select the module for which you would like to create a new item
 lblKey = Key
+lblIsKey = Is key field
 lblTopics = Topics
 lblEnabled = Enabled
 lblCheckRequiredFields = Check for required fields
