*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgRetrievingItems = Retrieving items...
 msgReadingFilesHasFinished = Finished reading files
 msgEnterValueForFind = Please enter a value to find and replace
 msgExportFieldSelect = Select the fields that you want to export
