--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,6 +1,6 @@
+msgRetrievingItems = Bezig met het ophalen van de items...
 lblItemFormTab = Item formulier tab
 lblIsKey = Is sleutelveld
-lblShowInQuickView = Toon in de quick view
 msgReadingFilesHasFinished = Inlezen van bestanden is volbracht
 sysDeveloperFieldUserInteger2=Gebruikersveld - Numeriek 2
 msgNotSaved=Niet alle veranderingen zijn opgeslagen. Wilt u deze nu opslaan?
