*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -273,7 +273,7 @@ lblAddField = Add Field
 lblRemoveField = Remove Field
 lblItemName = Item name
 lblItemNamePlural = Item name (plural)
-lblCanBeLended = Items can be lend to other persons
+lblCanBeLended = Items can be lent to other persons
 lblIcon16 = Icon 16x16
 lblIcon32 = Icon 32x32
 lblPropertyModule = Property Module (category, genre, ..)
