--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -209,7 +209,7 @@ msgNotSameState = The loan status for the selected items differ. They can not be
 msgEnterReturnDate = Please specify the date on which the item was returned
 msgEnterDate = Please specify the date on which the loan the starts
 msgSelectPerson = Please select the person to whom the item(s) are lend
-msgAllItemsAreAvailable = All the %1 items are available and can be lend
+msgAllItemsAreAvailable = All the %1 items are available and can be lent
 msgAllItemsLoanInformation = Updating the information of %1 items. The items are currently all borrowed and can all be registered as returned.
 msgItemIsAvailable = The item is currently available and can be lend
 msgLoanInformation = Item with title %1 has been borrowed by <b>%2</b>. The item was borrowed <b>%3 days</b> ago. %4
