--- a/log4j.properties
+++ b/log4j.properties
@@ -1,13 +1,14 @@
 #
-#Sun Feb 13 10:59:46 CET 2011
+#Sat Nov 19 12:48:31 CET 2011
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.logfile.File=/C\:/Users/RJ/Documents/Development/projects/datacrow/data/data_crow.log
 log4j.rootLogger=debug, textpane, logfile, stdout
 log4j.appender.logfile.layout.ConversionPattern=%5p [%t] (%F\:%L) - %m%n
 log4j.appender.textpane=net.datacrow.util.logging.TextPaneAppender
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F\:%L) - %m%n
 log4j.appender.textpane.layout=org.apache.log4j.PatternLayout
-log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.MaxFileSize=500KB
+log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.MaxBackupIndex=1
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
