*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -190,9 +190,11 @@ msgAssociateMassUpdateHelp = Updates %1 with the information retrieved from the 
 msgMovieMassUpdateHelp = Updates movies with the information retrieved from the selected Online Service. A perfect match on the title is needed to update the item successfully.
 msgEndDateMustBeAfterStartDate = The end date must be after the start date
 msgNoTitleRewritersFound = No enabled title re-writers found!
+msgNoAssociateNameRewritersFound = No enabled name re-writers found!
 msgFailedToLoadUserSettings = Failed to load user settings, using the default!. Error: %1
 msgFailedToOpen = Failed to open the dialog you requested: %1 
 msgTitleRewriterExplanation = Rewrites all titles. Every title is rewritten according to the defined settings. Example: defined member word "a", title "a great movie": results in "great movie, a"
+msgAssociateNameRewriterExplanation = Rewrites the names of all persons. Every name is rewritten according to the defined settings. 
 msgNoMemberWordsDefined = No member words defined
 msgAutoNumberError = Cannot determine next value for %1. Error: %2
 msgNoRenumbersFound = No enabled auto numberers found!
