--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -11,6 +11,7 @@ tpWebServer = Web server control panel. Stop or start the web server.
 tpViewSettings = Customize the current view (CTRL-Y)
 tpUpdateAll = Updates multiple items with the selected value(s).
 tpToolSelectWizard = Helps you to select the right tool for the job
+tpAssociateNameRewriter = Set rewriting (also known as formatting) rules for the names of new persons. Additionally you can rewrite all the existing names.
 tpTitleRewriter = Set rewriting (also known as formatting) rules for the titles of new items. Additionally you can rewrite all the existing titles.
 tpSort = Sort the items. Items can be sorted on multiple fields.
 tpSettings = Opens the settings window.
