--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+lblAssociateNameRewriter = Naam herschrijver
 msgRetrievingItems = Bezig met het ophalen van de items...
 lblItemFormTab = Item formulier tab
 lblIsKey = Is sleutelveld
@@ -151,6 +152,7 @@ sysBookFieldservice=Service
 sysBookFieldEditionComment=Editie Opmerking
 sysSoftware_platformItem=Platform
 msgTitleRewriterExplanation=Herschijft alle titels. Bijvoorbeeld: wanneer "a" is gedefinieerd als lidwoord dan wordt de titel "a great movie"  herschreven naar "great movie, a"
+msgNameRewriterExplanation=Hiermee kan de weergave van de voor en achternaam van de personen worden bepaald. 
 msgErrorWhileCreatingReport=Er is een fout opgetreden bij het aanmaken van het rapport: %1
 msgFailedToLoadUserSettings=Er is een fout opgetreden bij het inlezen van de gebruikersinstellingen: %1
 msgExportedModule=Module %1 is geëxporteerd
@@ -481,6 +483,7 @@ sysDirectorItemPlural=Regisseurs
 sysAudiocdFieldDaysTillOverDue=Aantal dagen tot uiterste retourdatum
 sysSuperItemPlural=Items
 msgNoTitleRewritersFound=Geen actieve titel herschrijvers gevonden!
+msgNoNameRewritersFound=Geen actieve naam herschrijvers gevonden!
 msgWritingItemCache=Item cache wordt weggeschreven.
 sysMusictrackFieldLanguages=Talen
 sysMusicalbumFieldartists_persist=Artist Persistence
@@ -569,6 +572,7 @@ sysContainerFieldFilesize=Bestandsgrootte
 tpCompactAndShutdown=Herschrijft de database en maakt deze compact. De applicatie wordt afgesloten zodra dit is voltooid.
 msgDeleteQuestion=Weet u zeker dat u de geselecteerde items definitief wilt verwijderen.
 tpTitleRewriter=Titels kunnen worden herschreven. Hier kunt u de regels voor het herschrijven van nieuwe titels opgegeven en ook de bestaande titels herschrijven.
+tpAssociateNameRewriter=De volgorde van de voor- en achternaam van de persoon kan hier worden aangegeven.
 sysBookFieldCategory=Categorie
 lblFindAgain=Filter opnieuw
 lblNewFilename=Nieuwe bestandsnaam
