*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -49,6 +49,7 @@ lblExportModulePath = Export path. Location where the export file will be placed
 lblModuleExportWizard = Export Module Wizard
 lblModuleImportWizard = Import Module Wizard 
 lblSummary = Summary
+lblNameDisplayFormat = Select name display format 
 lblModuleImportFile = Module import file (ZIP)
 lblRetrieveFeatureListing = Retrieve Amazon feature listing information
 lblServerSettings = Server Specific Settings
@@ -333,7 +334,7 @@ lblManageX = Maintain %1
 lblManage = Maintain
 lblTitleRewriter = Title Rewriter
 lblRestartNumbering = Restart numbering
-lblRewriteAll = Rewrite all Titles
+lblRewriteAll = Rewrite All
 lblFillGapsOnly = Fill gaps only
 lblRenumberMode = Renumber Modus
 lblRenumberAll = (Re-) number all Items
