--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+lblNameDisplayFormat = Selecteer naam weergave formaat
 lblAssociateNameRewriter = Naam herschrijver
 msgRetrievingItems = Bezig met het ophalen van de items...
 lblItemFormTab = Item formulier tab
@@ -1899,7 +1900,7 @@ sysMusicalbum_externalreferenceFieldLabel=Label
 sysMediaFieldLabel=Label
 lblAlignment=Uitlijning
 sysTabItem=Tab
-lblRewriteAll=Alle titels herschrijven
+lblRewriteAll=Alle herschrijven
 lblCredits=Credits
 sysSoftware_storagemediumFieldIcon=Icoon
 msgProcessingModuleItems=De items, behorend bij de module, worden verwerkt
