*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblOpenItemsDefaultModus = Open items by default in the edit modus
 lblImdbOriginalTitle = When searching on the non-US imdb.com sites store the title in the Title (local) field and the US title in the Title field (slow)
 lblAssociateNameRewriter = Name Rewriter
 lblItemFormTab = Item form tab
@@ -541,6 +542,7 @@ lblOnlineSearch = Online Search
 lblSQLTool = SQL tool
 lblOpenItem = Open %1
 lblEditItemAsNew = Edit as new
+lblEditItem = Edit %1
 lblOK = Ok
 lblCancel = Cancel
 lblClose = Close
