--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -23,7 +23,8 @@ tpRetrieveAudioCDInfo = Retrieve information on the audio CD currently inserted 
 tpResourceEditor = Edit any text of Data Crow and a very convenient tools for making a new translation.
 tpManageItemX = Create, delete or edit %1.
 tpQuickViewSettings = Modify the quick view (the panel shown on the right-hand side of the view). You can add, remove and order the fields. 
-tpOpenItem = Opens the selected item in the item form. From within the item form the information can be viewed and altered.
+tpOpenItem = Opens the selected item in the item form. From within the item form the information can be reviewed.
+tpEditItem = Opens the selected item in the item form. From within the item form the information can be reviewed and edited.
 tpOnlineSearch = Use an online service to find your items and add them to Data Crow.
 tpNewItemWizard = Easily add a new item. After following the steps of this wizard you will have created a new item. This is this easiest way of adding a single item to Data Crow.
 tpMassUpdate = Update multiple existing items using your preferred online service. This only works for existing items which are currently displayed in the view.
