--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,6 @@
+lblOpenItemsDefaultModus = Open items standaard in bewerken modus.
+tpEditItem = Open het item in het item formulier. In dit formulier kunnen de gegevens van het item worden aangepast.
+lblEditItem = Item bewerken
 lblImdbOriginalTitle = Bij het zoeken naar films op de niet US imdb sites bewaar dan de titel in Titel (lokaal) en de US titel in het Titel veld (langzamer)
 lblNameDisplayFormat = Selecteer naam weergave formaat
 lblAssociateNameRewriter = Naam herschrijver
