*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,5 @@
+tpMassUpdateAlwaysUseFirst=Gebruik altijd het eerst gevonden resultaat
+lblMassUpdateAlwaysUseFirst=Gebruik altijd het eerst gevonden resultaat. Dit is sneller, maar, er is geen controle op de kwaliteit van de match!
 lblOpenItemsDefaultModus = Open items standaard in bewerken modus.
 tpEditItem = Open het item in het item formulier. In dit formulier kunnen de gegevens van het item worden aangepast.
 lblEditItem = Item bewerken
