--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblMassUpdateAlwaysUseFirst = Always use first result (quick but less precise)
 lblOpenItemsDefaultModus = Open items by default in the edit modus
 lblImdbOriginalTitle = When searching on the non-US imdb.com sites store the title in the Title (local) field and the US title in the Title field (slow)
 lblAssociateNameRewriter = Name Rewriter
